--- a/app/src/main/res/layout/activity_matter_center.xml
+++ b/app/src/main/res/layout/activity_matter_center.xml
@@ -8,56 +8,38 @@
 
     <include layout="@layout/layout_title_bar" />
 
-    <RadioGroup
-        android:id="@+id/rg_matter"
-        android:background="#ffffff"
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="5dp"
         android:gravity="center"
-        android:orientation="horizontal"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp">
-
-        <RadioButton
-            android:paddingLeft="@dimen/dimens_20dp"
-            android:paddingRight="@dimen/dimens_20dp"
-            android:id="@+id/matter_paster_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:button="@null"
-            android:text="贴纸"
-            android:textColor="#ff0000"
-            />
-
-        <RadioButton
-            android:paddingLeft="@dimen/dimens_20dp"
-            android:paddingRight="@dimen/dimens_20dp"
-            android:textColor="#ff0000"
-            android:id="@+id/matter_dynamic_pasting_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:button="@null"
-            android:checked="true"
+        android:paddingTop="@dimen/dimens_5dp">
+        <TextView
+            android:id="@+id/tv_paster"
+            android:paddingBottom="5dp"
+            android:gravity="center"
+            android:text="贴 纸"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/tv_dynamic"
+            android:paddingBottom="5dp"
             android:gravity="center"
             android:text="动态贴图"
-            />
-
-        <RadioButton
-            android:paddingLeft="@dimen/dimens_20dp"
-            android:paddingRight="@dimen/dimens_20dp"
-            android:textColor="#ff0000"
-            android:id="@+id/matter_jigsaw_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:button="@null"
-            android:gravity="right"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/tv_template"
+            android:paddingBottom="5dp"
+            android:gravity="center"
             android:text="拼图模板"
-           />
-
-    </RadioGroup>
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
     <View
         android:layout_width="wrap_content"
