--- a/app/src/main/res/layout/layout_management_dynamic_grid_item.xml
+++ b/app/src/main/res/layout/layout_management_dynamic_grid_item.xml
@@ -7,7 +7,8 @@
 
     <RelativeLayout
         android:layout_width="110dp"
-        android:layout_height="110dp">
+        android:layout_height="110dp"
+        android:background="@color/white">
 
         <com.putao.camera.editor.view.FilterEffectThumbnailView
             android:id="@+id/collage_download_iv"
@@ -44,6 +45,18 @@
             android:layout_alignParentTop="true"
             android:src="@drawable/photo_new_icon"
             android:visibility="invisible" />
+        <ImageView
+            android:id="@+id/collage_photo_download_iv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="10dp"
+            android:paddingBottom="10dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:src="@drawable/btn_22_01"
+            android:visibility="visible" />
+
+
     </RelativeLayout>
 
 </LinearLayout>
