--- a/app/src/main/res/layout/layout_title_bar.xml
+++ b/app/src/main/res/layout/layout_title_bar.xml
@@ -2,10 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/title_bar_rl"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="60dp"
     android:layout_alignParentTop="true"
     android:layout_centerHorizontal="true"
-    android:background="@color/white">
+
+    android:background="#ff5859">
 
     <LinearLayout
         android:id="@+id/left_btn_ll"
@@ -20,7 +21,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="6dp"
-            android:background="@drawable/selector_back_btn"
+            android:paddingLeft="6dp"
+            android:background="@drawable/btn_20_back_w_nor"
             android:textColor="@color/title_text_color" />
 
         <Button
@@ -47,7 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="贴纸列表"
-            android:textColor="@color/title_text_color"
+            android:textColor="@color/white"
             android:textSize="@dimen/dimens_20dp" />
     </LinearLayout>
 
@@ -60,10 +62,12 @@
         android:orientation="horizontal">
 
         <Button
+            android:background="#ff5859"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
             android:id="@+id/right_btn"
-            style="@style/button.red"
             android:layout_marginRight="10dp"
-            android:text=""
+            android:textColor="@color/white"
             android:textSize="@dimen/activity_title_size" />
     </LinearLayout>
 
